--- a/src/makefile
+++ b/src/makefile
@@ -1,20 +1,39 @@
 BUILD:=../build
 SRC:=.
 
+ENTRYPOINT:=0x10000 # 内核的入口地址，链接时指定
 
 $(BUILD)/boot/%.bin: $(SRC)/boot/%.asm
 	$(shell mkdir -p $(dir $@))
 	nasm -f bin $< -o $@
 
+$(BUILD)/kernel/%.o: $(SRC)/kernel/%.asm
+	$(shell mkdir -p $(dir $@))
+	nasm -f elf32 $< -o $@
 
-$(BUILD)/main.img: $(BUILD)/boot/boot.bin \
-	$(BUILD)/boot/loader.bin
+# -Ttext 是 Linux 下的 ld 命令的一个选项，它指定程序的代码段的起始地址
+$(BUILD)/kernel.bin: $(BUILD)/kernel/start.o
+	$(shell mkdir -p $(dir $@))
+	ld -m elf_i386 -static $^ -o $@ -Ttext $(ENTRYPOINT)
+
+$(BUILD)/system.bin: $(BUILD)/kernel.bin
+	objcopy -O binary $< $@
+
+$(BUILD)/system.map: $(BUILD)/kernel.bin
+	nm $< | sort > $@
+	
+	
+$(BUILD)/system.img: $(BUILD)/boot/boot.bin \
+	$(BUILD)/boot/loader.bin \
+	$(BUILD)/system.bin \
+	$(BUILD)/system.map \
 
 	qemu-img create -f raw -o size=32M $@
 	dd if=$(BUILD)/boot/boot.bin of=$@ bs=512 count=1 conv=notrunc
 	dd if=$(BUILD)/boot/loader.bin of=$@ bs=512 count=4 seek=2 conv=notrunc
+	dd if=$(BUILD)/system.bin of=$@ bs=512 count=200 seek=10 conv=notrunc
 
-test: $(BUILD)/main.img
+test: $(BUILD)/system.img
 
 .PHONY: clean # means the Makefile has nothing to do with a file called "clean" 
 clean:
